imports/ui/stylesheets/home.css
.home {
    width: 100%;
    height: calc(100% - 100px);
    padding: 15px;
}

.hall-card {
    position: relative;
    display: inline-block;
    vertical-align: top;
    flex-direction: column;
    margin: 15px;
    width: calc(25% - 30px);
    border-radius: 3px;
    background-color: #fff;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
}

.hall-card-image {
    width: 100%;
    height: auto;
}

.hall-card-image-overlay {
    position: absolute;
    top: 0px;
    width: 100%;
    height: auto;
}

.hall-card-title {
    font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
    font-size: 24px;
    font-weight: 300;
    padding: 15px 15px 20px 15px;
}

.hall-card-phone {
    font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
    font-size: 14px;
    font-weight: 300;
    padding: 0px 15px;
}

.hall-card-address {
    font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
    font-size: 14px;
    font-weight: 300;
    padding: 0px 15px;
}

.hall-card-price {
    font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
    font-size: 14px;
    font-weight: 300;
    padding: 0px 15px;
}

.hall-card-description {
    font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-weight: 300;
    padding: 20px 15px 15px 15px;
}

.hall-card-actions {
    width: 100%;
    border-top: solid 1px #ddd;
}

.home .action-button {
    width: calc(100% - 20px) !important;
    margin: 10px !important;
}

.floating-button {
    position: fixed !important;
    bottom: 50px !important;
    right: 50px !important;
}

.hall-card-remove {
    cursor: pointer;
    position: absolute;
    color: #eee;
    top: 5px;
    right: 5px;
}
.hall-card-remove:hover {
    color: red
}

.triangle {
    position: absolute;
    top: 0;
    right: 0;
    width: 0; 
    height: 0; 
    border-top: 0px solid transparent;
    border-bottom: 60px solid transparent; 
    border-right: 60px solid #111;
}

.mdl-dialog {
    min-width: 350px;
    width: -webkit-fit-content !important;
}

